--- a/css/layout.css
+++ b/css/layout.css
@@ -310,7 +310,7 @@ body {
     }
 
 .anhnen {
-    background-image: url("/images/bg-5.jpg");
+    background-image: url("/images/bg_5.jpg");
     background-size: cover;
     width: 100%;
     height: 800px;
@@ -459,7 +459,7 @@ body {
 
 /* contact */
 .contact {
-    background-image: url('/images/bg-contact.jpg');
+    background-image: url('/images/bg_contact.jpg');
     background-size: cover;
     padding-top: 80px;
     padding-bottom: 50px;
